@@ -1,4 +1,6 @@
 Version 0.12.0
+* plugins implementation
+* removed bootscript (will be automatically converted to a plugin)
 * fixed locking issue on IE (2991747, reported by deroock)
 * fixed unparsed option during WSIF export (M.Ellison)
 * fixed some issues with WSIF external loading
